part-1/1.09/pingpong/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping
spec:
  selector:
    app: ping
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
  type: ClusterIP
